--- a/render.yaml
+++ b/render.yaml
@@ -6,11 +6,11 @@ services:
     buildCommand: './bin/render-build.sh'
     startCommand: './bin/rails server'
     envVars:
-      - key: postgresql://chatgenie:bfXLQFP3s4wz5HMrCwwVlbfzaUY7vtjf@dpg-d3ru1d24d50c73fmbft0-a/chatgenie_q4j2
+      - key: DATABASE_URL
         fromDatabase:
           name: mysite-db
           property: connectionString
-      - key: c14f3a7c81d9db5409eb276e31654346
+      - key: RAILS_MASTER_KEY
         sync: false
       - key: WEB_CONCURRENCY
         value: 2
