--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: mysite-db
-          property: connectionString
+          property: postgresql://chatgenie:bfXLQFP3s4wz5HMrCwwVlbfzaUY7vtjf@dpg-d3ru1d24d50c73fmbft0-a/chatgenie_q4j2
       - key: RAILS_MASTER_KEY
         sync: false
       - key: WEB_CONCURRENCY
