--- a/config/database.yml
+++ b/config/database.yml
@@ -22,13 +22,13 @@ default: &default
 
 development:
   <<: *default
-  database: mysite_development
+  database: lol_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: mysite
+  #username: lol
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -56,7 +56,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: mysite_test
+  database: lol_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -75,30 +75,11 @@ test:
 #   production:
 #     url: <%= ENV["MY_APP_DATABASE_URL"] %>
 #
-# Connection URLs for non-primary databases can also be configured using
-# environment variables. The variable name is formed by concatenating the
-# connection name with `_DATABASE_URL`. For example:
-#
-#   CACHE_DATABASE_URL="postgres://cacheuser:cachepass@localhost/cachedatabase"
-#
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: mysite_production
-    username: mysite
-    password: <%= ENV["MYSITE_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: mysite_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: mysite_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: mysite_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  database: lol_production
+  username: lol
+  password: <%= ENV["LOL_DATABASE_PASSWORD"] %>
