--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,8 +1,8 @@
 # Name of your application. Used to uniquely configure containers.
-service: mysite
+service: lol
 
 # Name of the container image.
-image: your-user/mysite
+image: your-user/lol
 
 # Deploy to these servers.
 servers:
@@ -56,7 +56,7 @@ aliases:
 # Use a persistent storage volume for sqlite database files and local Active Storage files.
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
-  - "mysite_storage:/rails/storage"
+  - "lol_storage:/rails/storage"
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
