--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "engines": {
-    "node": "20.x" 
+    "node": "24.3.0" 
   }
 }
